@@ -6,7 +6,7 @@ CURRENT VERSION:
 	 * Save:	8
 	 * Network:	11
 
-	Android		33
+	Android		34
 	Flash GUI:	2
 	Swing GUI:	2
 	Simple GUI:	1.1.1.1
@@ -20,6 +20,7 @@ CURRENT VERSION:
 	MapEditor can load TEG/JTEG xml maps
 	Card Ownership view shows you the cards you own when you dont own the country in Yellow
 
+	Android 34 auto.save file fails to fully create on some systems, then the load fails to load it leaving the user with a blank screen
 	Android 33 find Closest Country if we are not touching a actual Country
 		   if the system kills off the game because of too little mem, the game will then be loaded on next startup
 		   do not overlap text in MapStore and Lobby game list
